--- a/StudyProject/Views/EnterSystem/Login.cshtml
+++ b/StudyProject/Views/EnterSystem/Login.cshtml
@@ -18,7 +18,7 @@
                     <label>Пароль</label>
                     <input type="password" class="form-control" name="password">
                 </div>
-                <a href="@Url.Action("Registration","EnterSystem")" class="float-end" style="text-decoration:none;">Регистрация</a>
+                <a href="@Url.Action("Register","EnterSystem")" class="float-end" style="text-decoration:none;">Регистрация</a>
                 <button type="submit" class="btn btn-primary w-100 mt-2">Войти</button>
             }
         </div>
@@ -28,3 +28,4 @@
 {
 
 }
+
