--- a/StudyProject/Views/Home/Index.cshtml
+++ b/StudyProject/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using ApplicationDbContext.Controllers;
+
+@model tbUser
+@{
     ViewBag.Title = "Home Page";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";
+Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 <div class="row">
-    Hello world!
+    @Model.FirstName
 </div>
