--- a/StudyProject/Views/Home/Index.cshtml
+++ b/StudyProject/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@using ApplicationDbContext.Controllers;
+﻿@using StudyProject;
 
 @model tbUser
 @{
     ViewBag.Title = "Home Page";
-Layout = "~/Views/Shared/_MainLayout.cshtml";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 <div class="row">
