--- a/StudyProject/Views/Shared/_MainLayout.cshtml
+++ b/StudyProject/Views/Shared/_MainLayout.cshtml
@@ -30,12 +30,12 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
+                    <a href="@Url.Action("Index","Home")" class="nav-link">Home</a>
                 </li>
             </ul>
         </nav>
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <a href="index3.html" class="brand-link">
+            <a href="@Url.Action("Index","Home")" class="brand-link">
                 <img src="~/dist/img/AdminLTELogo.png" alt="" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">EducationEasy</span>
             </a>
@@ -66,9 +66,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/charts/flot.html" class="nav-link">
+                                    <a href="@Url.Action("InstitutionManagement","Admin")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Flot</p>
+                                        <p>Начальні Заклади</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
