--- a/StudyProject/Views/Admin/InstitutionManagement.cshtml
+++ b/StudyProject/Views/Admin/InstitutionManagement.cshtml
@@ -5,20 +5,23 @@
 @{
     ViewBag.Title = "InstitutionManagement";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
+    List<tbUser> users = ViewBag.users;
 }
 
 <h4 class="text-center">Управління Навчальними Закладами</h4>
 
 
-   <div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <a href="@Url.Action("AddNewInstitution","Admin")" class="btn btn-default"><i class="fas fa-plus"></i> Додати навчальний заклад</a>
-                </div>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                    <i class="fas fa-plus"></i> Додати навчальний заклад
+                </button>
             </div>
         </div>
     </div>
+</div>
 
 <div class="content">
     <div class="row">
@@ -35,13 +38,14 @@
                         <th>
                             Адреса
                         </th>
+                        <th></th>
                     </tr>
 
                     @foreach (var item in Model)
                     {
                         <tr>
                             <td>
-                                <a href="@Url.Action("EditInstitution", "Admin", new { idInstitution = item.idInstitution})">
+                                <a href="@Url.Action("InstitutionUsers", "Admin", new { id = item.idInstitution})">
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </a>
                             </td>
@@ -51,6 +55,11 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Adress)
                             </td>
+                            <td>
+                                <button type="button" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#editInst" onclick="setValue('@item.idInstitution')">
+                                    <i class="fas fa-edit fa-1x"></i>
+                                </button>
+                            </td>
                         </tr>
                     }
 
@@ -59,3 +68,108 @@
         </div>
     </div>
 </div>
+
+
+@using (Html.BeginForm("AddNewInstitution", "Admin", FormMethod.Post))
+{
+    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Привязка вчителів до навчального закладу</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Назва</label>
+                            <div class="col-12">
+                                <input type="text" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Адреса</label>
+                            <div class="col-12">
+                                <input type="text" name="Adress" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <table class="table">
+                        <thead class="text-center">
+                            Оберіть викладачів які будуть привязані до Навчального Закладу
+                        </thead>
+                        <tr>
+                            <th></th>
+                            <th>Ім'я</th>
+                            <th>По батькові</th>
+                            <th>Фамілія</th>
+                        </tr>
+                        @foreach (tbUser user in users)
+                        {
+                            <tr>
+                                <td><input type="checkbox" name="users" value="@user.idUser" /></td>
+                                <td>@user.FirstName</td>
+                                <td>@user.MiddleName</td>
+                                <td>@user.LastName</td>
+                            </tr>
+                        }
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
+                    <button type="submit" class="btn btn-primary">Зберегти</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
+
+@using (Html.BeginForm("EditInstitution", "Admin", FormMethod.Post))
+{
+    <div class="modal fade" id="editInst" tabindex="-1" role="dialog" aria-labelledby="title" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="title">Привязка вчителів до навчального закладу</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Назва</label>
+                            <div class="col-12">
+                                <input type="text" name="Name" class="form-control" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-2">Адреса</label>
+                            <div class="col-12">
+                                <input type="text" name="Adress" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <input type="hidden" name="idInstitution" id="inst" value="" />
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
+                    <button type="submit" class="btn btn-primary">Зберегти</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+@section Scripts{
+    <script>
+        function setValue(id) {
+            $('#inst').val(id);
+        }
+    </script>
+}
