--- a/StudyProject/Views/Tutor/Groups.cshtml
+++ b/StudyProject/Views/Tutor/Groups.cshtml
@@ -1,22 +1,20 @@
 ﻿@using StudyProject
 
-@model List<tbGroup>
+@model List<tbInstitution>
 
 @{
     ViewBag.Title = "Groups";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h4 class="text-center">Групи</h4>
 
 
-<div class="row">
+<div class="row mt-2">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    <i class="fas fa-plus"></i> Додати нову групу
-                </button>
+                <h4 class="text-center">Навчальні заклади та їх групи</h4>
+
             </div>
         </div>
     </div>
@@ -26,38 +24,53 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
-                <table class="table">
-                    <tr>
-                        <th>
-                            Назва
-                        </th>
-                        <th>
-                            Дата створення
-                        </th>
-                        <th>
-                        </th>
-                    </tr>
 
-                    @foreach (var item in Model)
-                    {
+
+                @foreach (var item in Model)
+                {
+
+                <div>
+                    <h4 class="text-center">@item.Name
+                    <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#exampleModal" onclick="setValueInstForGroup('@item.idInstitution')">
+                        <i class="fas fa-plus"></i> Додати нову групу
+                    </button>
+                    </h4>
+                </div>
+        
+                    <table class="table text-center">
                         <tr>
-                            <td>
-                                <a href="@Url.Action("UsersGroup", "Tutor", new { idGroup = item.idGroup})">
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </a>
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateCreate)
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#editGroup" onclick="setValue('@item.idGroup')">
-                                    <i class="fas fa-edit fa-1x"></i> 
-                                </button>
-                            </td>
+                            <th>
+                                Назва
+                            </th>
+                            <th>
+                                Додати групу
+                            </th>
                         </tr>
-                    }
+                        @foreach (tbGroup group in item.tbGroup)
+                        {
+                            <tr>
+                                <td>
+                                    <a href="@Url.Action("UsersGroup", "Tutor", new { idGroup = group.idGroup })">
+                                            @group.Name
+                                    </a>
 
-                </table>
+                                </td>
+                                <td>
+                                    <label>
+                                        @group.DateCreate
+                                    </label>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#editGroup" onclick="setValue('@group.idGroup')">
+                                        <i class="fas fa-edit fa-1x"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                }
+
+
             </div>
         </div>
     </div>
@@ -78,6 +91,7 @@
                         <div class="form-group">
                             <label class="control-label col-12">Назва</label>
                             <input type="text" name="Name" class="form-control" />
+                            <input type="hidden" id="grInst" name="idInstitution" value=""/>
                         </div>
                     </div>
                 </div>
@@ -125,6 +139,10 @@
     <script>
         function setValue(id) {
             $('#group').val(id);
+        }
+
+        function setValueInstForGroup(id) {
+            $('#grInst').val(id);
         }
     </script>    
 }
