--- a/StudyProject/Views/Shared/_Layout.cshtml
+++ b/StudyProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using StudyProject.Models
+@{ 
+    SelectImage sImage = new SelectImage();
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,6 +26,9 @@
 
 <style>
     body {
-        background-color: azure;
+        background-image: url(../../dist/img/@sImage.SelectedImage);
+        background-size: 100%;
     }
 </style>
+
+@*spring1 spring2 summer2 autumn autumn2*@
