--- a/StudyProject/Views/Shared/_MainLayout.cshtml
+++ b/StudyProject/Views/Shared/_MainLayout.cshtml
@@ -34,6 +34,16 @@
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="@Url.Action("Index","Home")" class="nav-link">Home</a>
                 </li>
+                <li class="nav-item d-none d-sm-inline-block">
+               
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Logout","EnterSystem")">
+                       <i class="fas fa-sign-out-alt"></i> Вихід
+                    </a>
+                </li>
             </ul>
         </nav>
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
