Add functional for invite user in groups

--- a/StudyProject/Views/EnterSystem/Login.cshtml
+++ b/StudyProject/Views/EnterSystem/Login.cshtml
@@ -19,6 +19,7 @@
                     <input type="password" class="form-control" name="password">
                 </div>
                 <a href="@Url.Action("Register","EnterSystem")" class="float-end" style="text-decoration:none;">Регистрация</a>
+                <input type="hidden" name="idInvite" value="@ViewBag.idInvite" />
                 <button type="submit" class="btn btn-primary w-100 mt-2">Войти</button>
             }
         </div>
