--- a/StudyProject/Views/EnterSystem/Register.cshtml
+++ b/StudyProject/Views/EnterSystem/Register.cshtml
@@ -37,6 +37,7 @@
                     <label>Введите пароль повторно</label>
                     <input type="password" class="form-control" name="RepeatPassword">
                 </div>
+                <input type="hidden" name="idInvite" value="@ViewBag.idInvite" />
                 <button type="submit" class="btn btn-primary w-100 mt-2">Зарегистрироваться</button>
             }
         </div>
