--- a/StudyProject/Views/Shared/_MainLayout.cshtml
+++ b/StudyProject/Views/Shared/_MainLayout.cshtml
@@ -97,49 +97,13 @@
                                 <li class="nav-item">
                                     <a href="pages/UI/general.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>General</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/icons.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Icons</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/buttons.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Buttons</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/sliders.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Sliders</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/modals.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Modals & Alerts</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/navbar.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Navbar & Tabs</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="pages/UI/timeline.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Timeline</p>
+                                        <p>Тести</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="pages/UI/ribbons.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Ribbons</p>
+                                        <p>Матеріали</p>
                                     </a>
                                 </li>
                             </ul>
